infra/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    gwin.yandex.cloud/subnets: "e9bfkve35ltv5qbc58qo,fl8pjrta78pl0lli70t4,e2ltmtfhnmuafht3ejtj"
    # `groupName` is required.
    gwin.yandex.cloud/groupName: "my-ingress-group" # group multiple ingresses to single Balancer
    gwin.yandex.cloud/externalIPv4Address: "auto" # external IPv4 address
    # Healthcheck
    gwin.yandex.cloud/rules.backends.hc.timeout: "5s" # health check timeout
    gwin.yandex.cloud/rules.backends.hc.interval: "15s" # check interval
    gwin.yandex.cloud/rules.backends.hc.healthyThreshold: "1" # checks to mark healthy
    gwin.yandex.cloud/rules.backends.hc.unhealthyThreshold: "5" # checks to mark unhealthy
    gwin.yandex.cloud/rules.backends.hc.port: "32208" # health check port
    gwin.yandex.cloud/rules.backends.hc.http.path:
      "/grafana/api/health"
      # HTTP health check path
spec:
  ingressClassName: gwin-default # use Gwin ingress class
  rules:
    - http:
        paths:
          - path: "/grafana"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    # `groupName` is required.
    gwin.yandex.cloud/groupName: "my-ingress-group" # group multiple ingresses to single Balancer
    gwin.yandex.cloud/externalIPv4Address: "auto" # external IPv4 address
    # Healthcheck
    gwin.yandex.cloud/rules.backends.hc.timeout: "5s"
    gwin.yandex.cloud/rules.backends.hc.interval: "15s"
    gwin.yandex.cloud/rules.backends.hc.healthyThreshold: "1"
    gwin.yandex.cloud/rules.backends.hc.unhealthyThreshold: "3"
    gwin.yandex.cloud/rules.backends.hc.port: "31666" # стандартный порт nginx
    gwin.yandex.cloud/rules.backends.hc.http.path: "/" # корневой путь
spec:
  ingressClassName: gwin-default # use Gwin ingress class
  rules:
    - http:
        paths:
          - path: "/myapp"
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
